--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
     implementation "com.github.parse-community.Parse-SDK-Android:parse:4.0.0"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
