--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,12 @@ dependencies {
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.google.mlkit:pose-detection:18.0.0-beta2'
+
+    def camerax_version = "1.2.0-alpha03"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:1.2.0-alpha03"
 }
