--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -52,4 +53,5 @@ dependencies {
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
     implementation "androidx.camera:camera-view:1.2.0-alpha03"
     implementation 'com.google.mlkit:pose-detection-accurate:18.0.0-beta2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
