--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:name=".CameraActivity"
             android:exported="false" />
         <activity
-            android:name=".ExercisesCounter"
+            android:name=".ExercisesActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
         <activity
